16 спринт. 1 проверка